@@ -42,20 +42,25 @@ import com.google.common.collect.Maps;
 import com.starrocks.catalog.Database;
 import com.starrocks.catalog.Table;
 import com.starrocks.common.InternalErrorCode;
-import com.starrocks.common.UserException;
+import com.starrocks.common.StarRocksException;
 import com.starrocks.common.jmockit.Deencapsulation;
 import com.starrocks.common.util.KafkaUtil;
 import com.starrocks.load.RoutineLoadDesc;
+import com.starrocks.metric.TableMetricsEntity;
+import com.starrocks.metric.TableMetricsRegistry;
 import com.starrocks.persist.EditLog;
 import com.starrocks.persist.RoutineLoadOperation;
 import com.starrocks.qe.ConnectContext;
 import com.starrocks.qe.OriginStatement;
 import com.starrocks.server.GlobalStateMgr;
+import com.starrocks.server.RunMode;
+import com.starrocks.server.WarehouseManager;
 import com.starrocks.sql.ast.AlterRoutineLoadStmt;
 import com.starrocks.sql.ast.CreateRoutineLoadStmt;
 import com.starrocks.thrift.TKafkaRLTaskProgress;
 import com.starrocks.transaction.TransactionState;
 import com.starrocks.utframe.UtFrameUtils;
+import com.starrocks.warehouse.DefaultWarehouse;
 import mockit.Expectations;
 import mockit.Injectable;
 import mockit.Mock;
@@ -73,7 +78,7 @@ public class RoutineLoadJobTest {
     public void testAfterAbortedReasonOffsetOutOfRange(@Mocked GlobalStateMgr globalStateMgr,
                                                        @Injectable TransactionState transactionState,
                                                        @Injectable RoutineLoadTaskInfo routineLoadTaskInfo)
-            throws UserException {
+            throws StarRocksException {
 
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
@@ -105,8 +110,10 @@ public class RoutineLoadJobTest {
     }
 
     @Test
-    public void testAfterAborted(@Injectable TransactionState transactionState,
-                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws UserException {
+    public void testAfterAborted(@Mocked RoutineLoadMgr routineLoadMgr,
+                                 @Injectable TransactionState transactionState,
+                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws StarRocksException {
+        Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
         List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
         routineLoadTaskInfoList.add(routineLoadTaskInfo);
         long txnId = 1L;
@@ -114,10 +121,12 @@ public class RoutineLoadJobTest {
         RLTaskTxnCommitAttachment attachment = new RLTaskTxnCommitAttachment();
         TKafkaRLTaskProgress tKafkaRLTaskProgress = new TKafkaRLTaskProgress();
         tKafkaRLTaskProgress.partitionCmtOffset = Maps.newHashMap();
-        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress);
+        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
         Deencapsulation.setField(attachment, "progress", kafkaProgress);
 
-        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress);
+        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
 
         new Expectations() {
             {
@@ -136,6 +145,9 @@ public class RoutineLoadJobTest {
                 routineLoadTaskInfo.getId();
                 minTimes = 0;
                 result = UUID.randomUUID();
+                routineLoadMgr.getJob(anyLong);
+                minTimes = 0;
+                result = routineLoadJob;
             }
         };
 
@@ -146,35 +158,229 @@ public class RoutineLoadJobTest {
         };
 
         String txnStatusChangeReasonString = "no data";
-        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
         Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
         Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
         Deencapsulation.setField(routineLoadJob, "progress", currentProgress);
+        TableMetricsEntity entity =
+                TableMetricsRegistry.getInstance().getMetricsEntity(routineLoadTaskInfo.getJob().tableId);
+        long prevValue = entity.counterRoutineLoadAbortedTasksTotal.getValue();
         routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
 
         Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
-        Assert.assertEquals(new Long(1), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assert.assertEquals(Long.valueOf(1), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assert.assertTrue(routineLoadJob.getOtherMsg(), routineLoadJob.getOtherMsg().endsWith(txnStatusChangeReasonString));
+
+        Assert.assertEquals(Long.valueOf(prevValue + 1), entity.counterRoutineLoadAbortedTasksTotal.getValue());
+
+        routineLoadTaskInfoList.clear();
+        routineLoadJob.afterAborted(transactionState, true, txnStatusChangeReasonString);
+        Assert.assertEquals(Long.valueOf(2), Deencapsulation.getField(routineLoadJob, "abortedTaskNum"));
+        Assert.assertEquals(Long.valueOf(prevValue + 2), entity.counterRoutineLoadAbortedTasksTotal.getValue());
     }
 
     @Test
-    public void testGetShowInfo(@Mocked KafkaProgress kafkaProgress) {
+    public void testAfterCommitted(@Mocked RoutineLoadMgr routineLoadMgr,
+                                 @Injectable TransactionState transactionState,
+                                 @Injectable KafkaTaskInfo routineLoadTaskInfo) throws StarRocksException {
+        Deencapsulation.setField(routineLoadTaskInfo, "routineLoadManager", routineLoadMgr);
+        List<RoutineLoadTaskInfo> routineLoadTaskInfoList = Lists.newArrayList();
+        routineLoadTaskInfoList.add(routineLoadTaskInfo);
+        long txnId = 1L;
+
+        RLTaskTxnCommitAttachment attachment = new RLTaskTxnCommitAttachment();
+        TKafkaRLTaskProgress tKafkaRLTaskProgress = new TKafkaRLTaskProgress();
+        tKafkaRLTaskProgress.partitionCmtOffset = Maps.newHashMap();
+        KafkaProgress kafkaProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+        Deencapsulation.setField(attachment, "progress", kafkaProgress);
+
+        KafkaProgress currentProgress = new KafkaProgress(tKafkaRLTaskProgress.getPartitionCmtOffset());
+
         RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
-        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
-        ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
-                TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
-        Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
-        Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
 
-        List<String> showInfo = routineLoadJob.getShowInfo();
-        Assert.assertEquals(true, showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
-                .anyMatch(entity -> entity.equals(errorReason.toString())));
-    }
-
-    @Test
-    public void testUpdateWhileDbDeleted(@Mocked GlobalStateMgr globalStateMgr) throws UserException {
         new Expectations() {
             {
-                globalStateMgr.getDb(anyLong);
+                transactionState.getTransactionId();
+                minTimes = 0;
+                result = txnId;
+                routineLoadTaskInfo.getTxnId();
+                minTimes = 0;
+                result = txnId;
+                transactionState.getTxnCommitAttachment();
+                minTimes = 0;
+                result = attachment;
+                routineLoadTaskInfo.getPartitions();
+                minTimes = 0;
+                result = Lists.newArrayList();
+                routineLoadTaskInfo.getId();
+                minTimes = 0;
+                result = UUID.randomUUID();
+                routineLoadMgr.getJob(anyLong);
+                minTimes = 0;
+                result = routineLoadJob;
+            }
+        };
+
+        new MockUp<RoutineLoadJob>() {
+            @Mock
+            void writeUnlock() {
+            }
+        };
+
+        Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.RUNNING);
+        Deencapsulation.setField(routineLoadJob, "routineLoadTaskInfoList", routineLoadTaskInfoList);
+        Deencapsulation.setField(routineLoadJob, "progress", currentProgress);
+        TableMetricsEntity entity =
+                TableMetricsRegistry.getInstance().getMetricsEntity(routineLoadTaskInfo.getJob().tableId);
+        long prevValue = entity.counterRoutineLoadCommittedTasksTotal.getValue();
+        routineLoadJob.afterCommitted(transactionState, true);
+
+        Assert.assertEquals(RoutineLoadJob.JobState.RUNNING, routineLoadJob.getState());
+        Assert.assertEquals(Long.valueOf(1), Deencapsulation.getField(routineLoadJob, "committedTaskNum"));
+
+        Assert.assertEquals(Long.valueOf(prevValue + 1), entity.counterRoutineLoadCommittedTasksTotal.getValue());
+    }
+
+    @Test
+    public void testPulsarGetShowInfo() {
+        {
+            // PAUSE state
+            PulsarRoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assert.assertTrue(showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+        }
+
+        {
+            // PAUSE state
+            PulsarRoutineLoadJob routineLoadJob = new PulsarRoutineLoadJob(
+                    1L, "task1", 1, 1, "http://url", "task-1", "sub-1");
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assert.assertTrue(showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+        }
+    }
+
+    @Test
+    public void testKafkaGetShowInfo() throws StarRocksException {
+        {
+            // PAUSE state
+            KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+            Deencapsulation.setField(routineLoadJob, "state", RoutineLoadJob.JobState.PAUSED);
+            ErrorReason errorReason = new ErrorReason(InternalErrorCode.INTERNAL_ERR,
+                    TransactionState.TxnStatusChangeReason.OFFSET_OUT_OF_RANGE.toString());
+            Deencapsulation.setField(routineLoadJob, "pauseReason", errorReason);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assert.assertEquals(true, showInfo.stream().filter(entity -> !Strings.isNullOrEmpty(entity))
+                    .anyMatch(entity -> entity.equals(errorReason.toString())));
+        }
+
+        {
+            // Progress
+            KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+
+            Map<Integer, Long> partitionOffsets = Maps.newHashMap();
+            partitionOffsets.put(Integer.valueOf(0), Long.valueOf(1234));
+            KafkaProgress kafkaProgress = new KafkaProgress(partitionOffsets);
+            Deencapsulation.setField(routineLoadJob, "progress", kafkaProgress);
+
+            Map<Integer, Long> partitionOffsetTimestamps = Maps.newHashMap();
+            partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(1701411708410L));
+            KafkaProgress kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
+            Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+
+            routineLoadJob.setPartitionOffset(0, 12345);
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assert.assertEquals("{\"0\":\"12345\"}", showInfo.get(20));
+            //The displayed value is the actual value - 1
+            Assert.assertEquals("{\"0\":\"1233\"}", showInfo.get(14));
+            Assert.assertEquals("{\"0\":\"1701411708409\"}", showInfo.get(15));
+        }
+
+        {
+            // UNSTABLE substate
+            KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+
+            Map<Integer, Long> partitionOffsetTimestamps = Maps.newHashMap();
+            partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(1701411708410L));
+            KafkaProgress kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
+            Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+
+            routineLoadJob.updateState(RoutineLoadJob.JobState.RUNNING, null, false);
+            // The job is set unstable due to the progress is too slow.
+            routineLoadJob.updateSubstate();
+
+            List<String> showInfo = routineLoadJob.getShowInfo();
+            Assert.assertEquals("UNSTABLE", showInfo.get(7));
+            // The lag [xxx] of partition [0] exceeds Config.routine_load_unstable_threshold_second [3600]
+            Assert.assertTrue(showInfo.get(16).contains(
+                    "partition [0] exceeds Config.routine_load_unstable_threshold_second [3600]"));
+
+            partitionOffsetTimestamps.put(Integer.valueOf(0), Long.valueOf(System.currentTimeMillis()));
+            kafkaTimestampProgress = new KafkaProgress(partitionOffsetTimestamps);
+            Deencapsulation.setField(routineLoadJob, "timestampProgress", kafkaTimestampProgress);
+            // The job is set stable due to the progress is kept up.
+            routineLoadJob.updateSubstate();
+            showInfo = routineLoadJob.getShowInfo();
+            Assert.assertEquals("RUNNING", showInfo.get(7));
+            Assert.assertEquals("", showInfo.get(16));
+
+            // The job is set stable.
+            routineLoadJob.updateSubstateStable();
+            showInfo = routineLoadJob.getShowInfo();
+            Assert.assertEquals("RUNNING", showInfo.get(7));
+            Assert.assertEquals("", showInfo.get(16));
+        }
+    }
+
+    @Test
+    public void testGetShowInfoSharedData(@Mocked GlobalStateMgr globalStateMgr,
+                                          @Mocked WarehouseManager warehouseManager) throws StarRocksException {
+        new MockUp<RunMode>() {
+            @Mock
+            public RunMode getCurrentRunMode() {
+                return RunMode.SHARED_DATA;
+            }
+        };
+
+        new Expectations() {
+            {
+                globalStateMgr.getWarehouseMgr();
+                result = warehouseManager;
+                warehouseManager.getWarehouse(0L);
+                result = new DefaultWarehouse(0, "default_warehouse");
+                warehouseManager.getWarehouse(1L);
+                result = new Exception("Warehouse id: 1 not exist");
+            }
+        };
+
+        KafkaRoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        routineLoadJob.setWarehouseId(0L);
+        List<String> showInfo = routineLoadJob.getShowInfo();
+        Assert.assertEquals(22, showInfo.size());
+        Assert.assertEquals("default_warehouse", showInfo.get(20));
+
+        routineLoadJob.setWarehouseId(1L);
+        showInfo = routineLoadJob.getShowInfo();
+        Assert.assertEquals("Warehouse id: 1 not exist", showInfo.get(20));
+    }
+
+    @Test
+    public void testUpdateWhileDbDeleted(@Mocked GlobalStateMgr globalStateMgr) throws StarRocksException {
+        new Expectations() {
+            {
+                globalStateMgr.getLocalMetastore().getDb(anyLong);
                 minTimes = 0;
                 result = null;
             }
@@ -188,13 +394,13 @@ public class RoutineLoadJobTest {
 
     @Test
     public void testUpdateWhileTableDeleted(@Mocked GlobalStateMgr globalStateMgr,
-                                            @Injectable Database database) throws UserException {
+                                            @Injectable Database database) throws StarRocksException {
         new Expectations() {
             {
-                globalStateMgr.getDb(anyLong);
+                globalStateMgr.getLocalMetastore().getDb(anyLong);
                 minTimes = 0;
                 result = database;
-                database.getTable(anyLong);
+                GlobalStateMgr.getCurrentState().getLocalMetastore().getTable(database.getId(), anyLong);
                 minTimes = 0;
                 result = null;
             }
@@ -209,14 +415,14 @@ public class RoutineLoadJobTest {
     public void testUpdateWhilePartitionChanged(@Mocked GlobalStateMgr globalStateMgr,
                                                 @Injectable Database database,
                                                 @Injectable Table table,
-                                                @Injectable KafkaProgress kafkaProgress) throws UserException {
+                                                @Injectable KafkaProgress kafkaProgress) throws StarRocksException {
 
         new Expectations() {
             {
-                globalStateMgr.getDb(anyLong);
+                globalStateMgr.getLocalMetastore().getDb(anyLong);
                 minTimes = 0;
                 result = database;
-                database.getTable(anyLong);
+                GlobalStateMgr.getCurrentState().getLocalMetastore().getTable(database.getId(), anyLong);
                 minTimes = 0;
                 result = table;
             }
@@ -225,7 +431,8 @@ public class RoutineLoadJobTest {
         new MockUp<KafkaUtil>() {
             @Mock
             public List<Integer> getAllKafkaPartitions(String brokerList, String topic,
-                                                       ImmutableMap<String, String> properties) throws UserException {
+                                                       ImmutableMap<String, String> properties,
+                                                       long warehouseId) throws StarRocksException {
                 return Lists.newArrayList(1, 2, 3);
             }
         };
@@ -252,8 +459,20 @@ public class RoutineLoadJobTest {
         Deencapsulation.setField(routineLoadJob, "maxBatchRows", 0);
         Deencapsulation.invoke(routineLoadJob, "updateNumOfData", 1L, 1L, 0L, 1L, 1L, false);
 
-        Assert.assertEquals(RoutineLoadJob.JobState.PAUSED, Deencapsulation.getField(routineLoadJob, "state"));
+        Assert.assertEquals(RoutineLoadJob.JobState.PAUSED, routineLoadJob.getState());
+        ErrorReason reason = routineLoadJob.pauseReason;
+        Assert.assertEquals(InternalErrorCode.TOO_MANY_FAILURE_ROWS_ERR, reason.getCode());
+        Assert.assertEquals(
+                "Current error rows: 1 is more than max error num: 0. Check the 'TrackingSQL' field for detailed information. " +
+                        "If you are sure that the data has many errors, you can set 'max_error_number' property " +
+                        "to a greater value through ALTER ROUTINE LOAD and RESUME the job",
+                reason.getMsg());
+    }
 
+    @Test
+    public void testPartialUpdateMode(@Mocked GlobalStateMgr globalStateMgr) {
+        RoutineLoadJob routineLoadJob = new KafkaRoutineLoadJob();
+        Assert.assertEquals(routineLoadJob.getPartialUpdateMode(), "row");
     }
 
     @Test
@@ -280,18 +499,24 @@ public class RoutineLoadJobTest {
         String desiredConcurrentNumber = "3";
         String maxBatchInterval = "60";
         String maxErrorNumber = "10000";
+        String maxFilterRatio = "0.3";
         String maxBatchRows = "200000";
         String strictMode = "true";
         String timeZone = "UTC";
         String jsonPaths = "[\\\"$.category\\\",\\\"$.author\\\",\\\"$.price\\\",\\\"$.timestamp\\\"]";
         String stripOuterArray = "true";
         String jsonRoot = "$.RECORDS";
+        String taskTimeout = "20";
+        String taskConsumeTime = "3";
         String originStmt = "alter routine load for db.job1 " +
                 "properties (" +
                 "   \"desired_concurrent_number\" = \"" + desiredConcurrentNumber + "\"," +
                 "   \"max_batch_interval\" = \"" + maxBatchInterval + "\"," +
                 "   \"max_error_number\" = \"" + maxErrorNumber + "\"," +
+                "   \"max_filter_ratio\" = \"" + maxFilterRatio + "\"," +
                 "   \"max_batch_rows\" = \"" + maxBatchRows + "\"," +
+                "   \"task_consume_second\" = \"" + taskConsumeTime + "\"," +
+                "   \"task_timeout_second\" = \"" + taskTimeout + "\"," +
                 "   \"strict_mode\" = \"" + strictMode + "\"," +
                 "   \"timezone\" = \"" + timeZone + "\"," +
                 "   \"jsonpaths\" = \"" + jsonPaths + "\"," +
@@ -299,6 +524,10 @@ public class RoutineLoadJobTest {
                 "   \"json_root\" = \"" + jsonRoot + "\"" +
                 ")";
         AlterRoutineLoadStmt stmt = (AlterRoutineLoadStmt) UtFrameUtils.parseStmtWithNewParser(originStmt, connectContext);
+        for (String key : stmt.getAnalyzedJobProperties().keySet()) {
+            System.out.println("Key: " + key);
+            System.out.println("Value: " + stmt.getAnalyzedJobProperties().get(key));
+        }
         routineLoadJob.modifyJob(stmt.getRoutineLoadDesc(), stmt.getAnalyzedJobProperties(),
                 stmt.getDataSourceProperties(), new OriginStatement(originStmt, 0), true);
         Assert.assertEquals(Integer.parseInt(desiredConcurrentNumber),
@@ -307,6 +536,12 @@ public class RoutineLoadJobTest {
                 (long) Deencapsulation.getField(routineLoadJob, "taskSchedIntervalS"));
         Assert.assertEquals(Long.parseLong(maxErrorNumber),
                 (long) Deencapsulation.getField(routineLoadJob, "maxErrorNum"));
+        Assert.assertEquals(Double.parseDouble(maxFilterRatio),
+                (double) Deencapsulation.getField(routineLoadJob, "maxFilterRatio"), 0.01);
+        Assert.assertEquals(Long.parseLong(taskTimeout),
+                (long) Deencapsulation.getField(routineLoadJob, "taskTimeoutSecond"));
+        Assert.assertEquals(Long.parseLong(taskConsumeTime),
+                (long) Deencapsulation.getField(routineLoadJob, "taskConsumeSecond"));
         Assert.assertEquals(Long.parseLong(maxBatchRows),
                 (long) Deencapsulation.getField(routineLoadJob, "maxBatchRows"));
         Assert.assertEquals(Boolean.parseBoolean(strictMode), routineLoadJob.isStrictMode());
